--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -236,6 +236,11 @@
         "command": "logicAppsExtension.switchDebugMode",
         "title": "Update debug mode for stateless workflow",
         "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.configureWebhookRedirectEndpoint",
+        "title": "Configure Webhook Redirect Endpoint",
+        "category": "Azure Logic Apps"
       }
     ],
     "viewsContainers": {
@@ -526,6 +531,11 @@
           "command": "logicAppsExtension.switchDebugMode",
           "when": "explorerResourceIsRoot == true",
           "group": "zzz_LogicApptools@2"
+        },
+        {
+          "command": "logicAppsExtension.configureWebhookRedirectEndpoint",
+          "when": "resourceFilename==local.settings.json",
+          "group": "zzz_appSettings@3"
         }
       ],
       "commandPalette": [
