VSFeat: Add use sql storage command (#1553)
* Register and add logic of command

* Add command to package.json

--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -236,6 +236,11 @@
         "command": "logicAppsExtension.switchDebugMode",
         "title": "Update debug mode for stateless workflow",
         "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.useSQLStorage",
+        "title": "Use SQL storage for your Logic App project",
+        "category": "Azure Logic Apps"
       }
     ],
     "viewsContainers": {
@@ -526,6 +531,11 @@
           "command": "logicAppsExtension.switchDebugMode",
           "when": "explorerResourceIsRoot == true",
           "group": "zzz_LogicApptools@2"
+        },
+        {
+          "command": "logicAppsExtension.useSQLStorage",
+          "when": "explorerResourceIsRoot == true",
+          "group": "zzz_LogicApptools@3"
         }
       ],
       "commandPalette": [
@@ -683,6 +693,7 @@
     "onCommand:logicAppsExtension.appSettings.rename",
     "onCommand:logicAppsExtension.appSettings.toggleSlotSetting",
     "onCommand:logicAppsExtension.appSettings.upload",
+    "onCommand:logicAppsExtension.useSQLStorage",
     "onView:newAzLogicApps",
     "workspaceContains:host.json",
     "workspaceContains:*/host.json",
