Add C# as initialize language option

--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -659,7 +659,8 @@
             "scope": "resource",
             "type": "string",
             "enum": [
-              "JavaScript"
+              "JavaScript",
+              "C#"
             ],
             "readOnly": true,
             "description": "The default language to use when performing operations like \"Create New Workflow\".",
