--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -266,6 +266,11 @@
         "command": "logicAppsExtension.disconnectRepo",
         "title": "Disconnect from Repo...",
         "category": "Azure Logic Apps"
+      },
+      {
+        "command": "logicAppsExtension.startRemoteDebug",
+        "title": "Start Remote Debugging",
+        "category": "Azure Logic Apps"
       }
     ],
     "viewsContainers": {
@@ -534,6 +539,11 @@
           "command": "logicAppsExtension.viewCommitInGitHub",
           "when": "view == newAzLogicApps && viewItem == deployment/github",
           "group": "1@4"
+        },
+        {
+          "command": "logicAppsExtension.startRemoteDebug",
+          "when": "view == newAzLogicApps && viewItem =~ /^azLogicApps(Production|)Slot$/ && config.logicAppsExtension.enableRemoteDebugging == true",
+          "group": "5@1"
         }
       ],
       "explorer/context": [
@@ -615,6 +625,10 @@
         {
           "command": "logicAppsExtension.toggleAppSettingVisibility",
           "when": "never"
+        },
+        {
+          "command": "logicAppsExtension.startRemoteDebug",
+          "when": "config.logicAppsExtension.enableRemoteDebugging == true"
         }
       ]
     },
@@ -691,6 +705,11 @@
             "type": "number",
             "description": "The timeout (in seconds) to be used when making requests, for example getting the latest templates.",
             "default": 15
+          },
+          "logicAppsExtension.enableRemoteDebugging": {
+            "type": "boolean",
+            "description": "Enable remote debugging for Node.js Logic Apps running on Linux App Service plans. Consumption plans are not supported. (experimental)",
+            "default": false
           }
         }
       }
@@ -742,6 +761,7 @@
     "onCommand:logicAppsExtension.viewCommitInGitHub",
     "onCommand:logicAppsExtension.disconnectRepo",
     "onCommand:logicAppsExtension.connectToGitHub",
+    "onCommand:logicAppsExtension.startRemoteDebug",
     "onView:newAzLogicApps",
     "workspaceContains:host.json",
     "workspaceContains:*/host.json",
