--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@fluentui/style-utilities": "8.7.7",
     "@fluentui/theme": "2.6.12",
     "@fluentui/web-components": "^2.5.4",
+    "@lexical/react": "^0.5.0",
     "@microsoft/applicationinsights-react-js": "^3.4.0",
     "@microsoft/applicationinsights-web": "^2.8.9",
     "@microsoft/fast-components": "^2.30.6",
@@ -83,6 +84,7 @@
     "immer": "9.0.15",
     "jest-environment-jsdom": "^29.3.1",
     "js-yaml": "4.1.0",
+    "lexical": "^0.5.0",
     "lodash.merge": "^4.6.2",
     "monaco-editor": "0.34.0",
     "monaco-yaml": "^4.0.2",
@@ -90,12 +92,10 @@
     "prism-react-renderer": "1.3.5",
     "process": "^0.11.10",
     "ps-tree": "^1.1.1",
-    "react": "18.2.0",
     "react-dnd": "16.0.1",
     "react-dnd-accessible-backend": "1.0.1",
     "react-dnd-html5-backend": "16.0.1",
     "react-dnd-multi-backend": "6.0.2",
-    "react-dom": "18.2.0",
     "react-icons": "4.4.0",
     "react-infinite-scroll-component": "6.1.0",
     "react-intl": "6.0.8",
@@ -127,7 +127,6 @@
     "@formatjs/cli": "5.0.9",
     "@formatjs/intl": "2.3.4",
     "@formatjs/ts-transformer": "3.9.11",
-    "@lexical/react": "^0.5.0",
     "@nrwl/cli": "15.2.1",
     "@nrwl/cypress": "15.2.1",
     "@nrwl/devkit": "15.2.1",
@@ -193,9 +192,10 @@
     "jsonc-eslint-parser": "^2.1.0",
     "jsonc-parser": "^2.3.1",
     "less-loader": "11.0.0",
-    "lexical": "^0.5.0",
     "playwright": "1.27.0",
     "prettier": "2.7.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-test-renderer": "18.2.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "standard-version": "9.5.0",
@@ -209,5 +209,9 @@
     "webpack-cli": "4.10.0",
     "worker-loader": "3.0.8",
     "yalc": "1.0.0-pre.53"
+  },
+  "peerDependencies": {
+    "react": "~16.4.0 || ~17.0.0 || ~18.0.0",
+    "react-dom": "~16.4.0 || ~17.0.0 || ~18.0.0"
   }
 }
