--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@fluentui/react-components": "^9.6.1",
     "@fluentui/react-focus": "8.8.0",
     "@fluentui/react-hooks": "8.6.7",
+    "@fluentui/react-portal-compat": "^9.0.31",
     "@fluentui/style-utilities": "8.7.7",
     "@fluentui/theme": "2.6.12",
     "@fluentui/web-components": "^2.5.4",
