--- a/package.json
+++ b/package.json
@@ -211,7 +211,7 @@
     "yalc": "1.0.0-pre.53"
   },
   "peerDependencies": {
-    "react": "~16.4.0 || ~17.0.0 || ~18.0.0",
-    "react-dom": "~16.4.0 || ~17.0.0 || ~18.0.0"
+    "react": "^16.4.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.4.0 || ^17.0.0 || ^18.0.0"
   }
 }
