--- a/libs/designer/package.json
+++ b/libs/designer/package.json
@@ -3,5 +3,9 @@
   "version": "0.2.69",
   "scripts": {
     "yalcpush": "yalc push ../../dist/libs/designer"
+  },
+  "peerDependencies": {
+    "react": "^16.4.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.4.0 || ^17.0.0 || ^18.0.0"
   }
 }
