App service and APIM actions now import resource parameters

--- a/package.json
+++ b/package.json
@@ -160,9 +160,9 @@
     "@types/js-yaml": "4.0.5",
     "@types/lodash.merge": "^4.6.7",
     "@types/node": "18.7.18",
-    "@types/react": "18.0.20",
+    "@types/react": "^18.0.28",
     "@types/react-dnd-multi-backend": "6.0.2",
-    "@types/react-dom": "18.0.6",
+    "@types/react-dom": "^18.0.10",
     "@types/react-test-renderer": "18.0.0",
     "@types/to-title-case": "1.0.0",
     "@types/vscode": "1.70.0",
@@ -195,8 +195,8 @@
     "less-loader": "11.0.0",
     "playwright": "1.27.0",
     "prettier": "2.7.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-test-renderer": "18.2.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "standard-version": "9.5.0",
