--- a/package.json
+++ b/package.json
@@ -156,7 +156,7 @@
     "@testing-library/react": "13.4.0",
     "@trivago/prettier-plugin-sort-imports": "3.3.0",
     "@types/d3-shape": "3.1.0",
-    "@types/jest": "28.1.8",
+    "@types/jest": "^28.1.8",
     "@types/js-yaml": "4.0.5",
     "@types/lodash.merge": "^4.6.7",
     "@types/node": "18.7.18",
