Update regex for review validation command (#1901)
* Update regex for review validation command

* Fix version

--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -584,7 +584,7 @@
         },
         {
           "command": "azureLogicAppsStandard.reviewValidation",
-          "when": "resourceDirname=~/.logs/export && resourceFilename=~/exportValidation.json/",
+          "when": "resourceDirname=~/\\.logs\\/export/ && resourceFilename=~/exportValidation.json/",
           "group": "navigation@1"
         },
         {
