--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -777,7 +777,8 @@
   },
   "extensionDependencies": [
     "ms-vscode.azure-account",
-    "ms-azuretools.vscode-azurefunctions"
+    "ms-azuretools.vscode-azurefunctions",
+    "azurite.azurite"
   ],
   "activationEvents": [
     "onCommand:azureLogicAppsStandard.openDesigner",
