--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "pathfinding": "^0.4.18",
     "prism-react-renderer": "1.3.5",
     "process": "^0.11.10",
+    "process-tree": "^1.0.3",
     "ps-tree": "^1.2.0",
     "react-dnd": "16.0.1",
     "react-dnd-accessible-backend": "^1.0.1",
