Add files to vsix package

--- a/apps/vs-code-designer/project.json
+++ b/apps/vs-code-designer/project.json
@@ -15,6 +15,7 @@
           "apps/vs-code-designer/src/assets",
           "apps/vs-code-designer/src/package.json",
           "apps/vs-code-designer/src/LICENSE.md",
+          "apps/vs-code-designer/src/README.md",
           {
             "glob": "**/*.svg",
             "input": "node_modules/@microsoft/vscode-azext-azureutils/resources",
