--- a/apps/vs-code-data-mapper/project.json
+++ b/apps/vs-code-data-mapper/project.json
@@ -14,7 +14,8 @@
         "assets": [
           "apps/vs-code-data-mapper/src/assets",
           "apps/vs-code-data-mapper/src/package.json",
-          "apps/vs-code-data-mapper/src/LICENSE.md"
+          "apps/vs-code-data-mapper/src/LICENSE.md",
+          "apps/vs-code-data-mapper/src/README.md"
         ],
         "externalDependencies": ["vscode", "commonjs"],
         "target": "node",
