--- a/apps/vs-code-data-mapper/src/package.json
+++ b/apps/vs-code-data-mapper/src/package.json
@@ -75,7 +75,8 @@
     ]
   },
   "extensionDependencies": [
-    "ms-vscode.azure-account"
+    "ms-vscode.azure-account",
+    "ms-azuretools.vscode-azurelogicapps"
   ],
   "activationEvents": [
     "workspaceContains:host.json",
