--- a/apps/vs-code-designer/src/package.json
+++ b/apps/vs-code-designer/src/package.json
@@ -447,7 +447,7 @@
         },
         {
           "command": "azureLogicAppsStandard.redeploy",
-          "when": "view == azLogicApps && viewItem =~ /^deployment//",
+          "when": "view == azLogicApps && viewItem =~ /^deployment\\//",
           "group": "1@2"
         },
         {
@@ -462,7 +462,7 @@
         },
         {
           "command": "azureLogicAppsStandard.openInPortal",
-          "when": "view == azLogicApps && viewItem =~ /^deployment//",
+          "when": "view == azLogicApps && viewItem =~ /^deployment\\//",
           "group": "1@3"
         },
         {
@@ -487,7 +487,7 @@
         },
         {
           "command": "azureLogicAppsStandard.viewDeploymentLogs",
-          "when": "view == azLogicApps && viewItem =~ /^deployment//",
+          "when": "view == azLogicApps && viewItem =~ /^deployment\\//",
           "group": "1@1"
         },
         {
@@ -783,7 +783,8 @@
   "extensionDependencies": [
     "ms-vscode.azure-account",
     "ms-azuretools.vscode-azurefunctions",
-    "azurite.azurite"
+    "azurite.azurite",
+    "ms-azuretools.vscode-azureresourcegroups"
   ],
   "activationEvents": [
     "onCommand:azureLogicAppsStandard.openDesigner",
